Renamed classes to lower-case

--- a/src/components/UI-kit/color-fonts/color-fonts.scss
+++ b/src/components/UI-kit/color-fonts/color-fonts.scss
@@ -7,7 +7,7 @@
     list-style-type: none;
   }
 
-  &__tagFonts {
+  &__tag-fonts {
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -41,11 +41,11 @@
     }
   }
 
-  &__textWrapper {
+  &__text-wrapper {
     width: 370px;
   }
 
-  &__textFonts {
+  &__text-fonts {
     display: block;
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-style: normal;
