--- a/src/components/booking/booking.scss
+++ b/src/components/booking/booking.scss
@@ -34,7 +34,7 @@
     margin-top: 5px;
   }
 
-  &__guestDropdown {
+  &__guest-dropdown {
     margin-top: 17px;
   }
 
@@ -48,7 +48,7 @@
     margin-bottom: 11px;
   }
 
-  &__priceToDays {
+  &__price-to-days {
     display: flex;
   }
 
@@ -58,7 +58,7 @@
     line-height: 18px;
   }
 
-  &__priceInfo {
+  &__price-info {
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -66,7 +66,7 @@
     transform: translateY(-1px);
   }
 
-  &__priceSymbol {
+  &__price-symbol {
     color: global.$dark25;
     font-weight: 700;
     font-size: 12px;
@@ -74,20 +74,20 @@
     transform: translateY(-2px);
   }
 
-  &__totalPrice {
+  &__total-price {
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
   }
 
-  &__totalPrice-text {
+  &__total-price-text {
     font-weight: 700;
     font-size: 19px;
     line-height: 23px;
     color: global.$dark100;
   }
 
-  &__totalPrice-underline {
+  &__total-price-underline {
     border-bottom: 1px dotted global.$dark25;
     height: 23px;
     max-width: 180px;
