--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -4,4 +4,4 @@ mixin checkbox({id = 'uniqIdQSQLK', title = '', rich = false, richText = 'Lorem'
     label.checkbox__label(for=id)
     span.checkbox__text(class=rich ? "checkbox__text--rich" : "")= title
     if rich
-      span.checkbox__richText= richText
+      span.checkbox__rich-text= richText
