--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -7,7 +7,7 @@
     position: relative;
   }
 
-  &__bottomField {
+  &__bottom-field {
     position: absolute;
     width: 320px;
     background: #fff;
@@ -135,7 +135,7 @@
     width: 266px;
   }
 
-  &__furnitureField {
+  &__furniture-field {
     width: 266px;
   }
 }
