--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -39,11 +39,11 @@
     margin-top: 10px;
   }
 
-  &__buttonIn {
+  &__button-in {
     margin-top: 20px;
   }
 
-  &__hasAccount {
+  &__has-account {
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
@@ -53,6 +53,6 @@
     transform: translateY(9px);
   }
 
-  &__buttonCreate {
+  &__button-create {
   }
 }
