--- a/src/components/registration/registration.scss
+++ b/src/components/registration/registration.scss
@@ -52,11 +52,11 @@
     margin-top: 10px;
   }
 
-  &__buttonPay {
+  &__button-pay {
     margin-top: 20px;
   }
 
-  &__hasAccount {
+  &__has-account {
     margin-top: 30px;
     display: flex;
     justify-content: space-between;
