--- a/src/layouts/UI/UI.pug
+++ b/src/layouts/UI/UI.pug
@@ -17,6 +17,6 @@ html(lang="en")
     block header
 
   body
-    main.UILayout__wrapper
-      img.UILayout__logo(src=require("../../images/LogoUI.png"), alt="logo")
+    main.UI-layout__wrapper
+      img.UI-layout__logo(src=require("../../images/LogoUI.png"), alt="logo")
       block content
