--- a/src/layouts/UI/UI.scss
+++ b/src/layouts/UI/UI.scss
@@ -1,9 +1,9 @@
-.UILayout__wrapper {
+.UI-layout__wrapper {
   background: #fff;
   margin: 0 auto;
   width: 1440px;
 }
 
-.UILayout__logo {
+.UI-layout__logo {
   margin: 30px 0 0 30px;
 }
