--- a/src/pages/landing-page/landing-page.pug
+++ b/src/pages/landing-page/landing-page.pug
@@ -8,6 +8,6 @@ block header
 
 block content
   section.landing-page
-    .landing-page__findForm 
+    .landing-page__find-form 
       +find-rooms({id: 'landingPage__findRooms1'})
     .landing-page__text Лучшие номера для вашей работы, отдыха и просто вдохновения
