--- a/src/pages/landing-page/landing-page.scss
+++ b/src/pages/landing-page/landing-page.scss
@@ -19,7 +19,7 @@
     min-height: auto;
   }
 
-  &__findForm {
+  &__find-form {
     margin: 1px 0 0 139px;
     @media (max-width: 620px) {
       margin: 0;
