--- a/src/pages/login-page/login-page.pug
+++ b/src/pages/login-page/login-page.pug
@@ -8,5 +8,5 @@ block header
 
 block content
   section.login-page
-    .login-page__loginForm 
+    .login-page__login-form 
       +login({id: 'loginPageLogin1'})
