--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -12,18 +12,18 @@ block header
 
 block content
   section.room-details
-    .room-details__imgBlock 
-      .room-details__leftImgBlock 
-        img.room-details__leftImg(src=require("../../images/room1.jpg"), alt="room1")
-      .room-details__rightImgBlock 
-        .room-details__topImg 
-          img.room-details__firstRightImage(src=require("../../images/room2.jpg"), alt="room2")
+    .room-details__img-block 
+      .room-details__left-img-block 
+        img.room-details__left-img(src=require("../../images/room1.jpg"), alt="room1")
+      .room-details__right-img-block 
+        .room-details__top-img 
+          img.room-details__first-right-image(src=require("../../images/room2.jpg"), alt="room2")
         .room-details__botImg 
-          img.room-details__secondRightImage(src=require("../../images/room3.jpg"), alt="room3")
-    .room-details__mainContent 
-      .room-details__leftContentBlock
-        .room-details__topContent 
-          .room-details__roomInfo 
+          img.room-details__second-right-image(src=require("../../images/room3.jpg"), alt="room3")
+    .room-details__main-content 
+      .room-details__left-content-block
+        .room-details__top-content 
+          .room-details__room-info 
             h2.room-details__header Сведения о номере
             +icon-text-list({list: [{title: 'Комфорт', text: 'Шумопоглощающие стены', icon: 'insert_emoticon'}, {title: 'Удобство', text: 'Окно в каждой из спален', icon: 'location_city'}, {title: 'Уют', text: 'Номер оснащён камином', icon: 'whatshot'},]})
           .room-details__review 
@@ -37,13 +37,13 @@ block content
             +comment({id: 'UniqIdComment1', title: 'Мурад Сарафанов', date: '5 дней', photo: 'photo.png', likes: 12, liked: true, text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'})
           .room-details__comment
             +comment({id: 'UniqIdComment2', title: 'Патрисия Стёклышкова', date: 'Неделю', photo: 'photo2.png', likes: 2, liked: false, text: 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент'})
-        .room-details__botContent
+        .room-details__bot-content
           .room-details__rules 
             h2.room-details__header Правила
             +bullet-list({title: 'Правила', list: ['Нельзя с питомцами', 'Без вечеринок и мероприятий', 'Время прибытия — после 13:00, а выезд до 12:00']})
-          .room-details__freeCancle
+          .room-details__free-cancel
             h2.room-details__header Отмена
             p.room-details__text Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
 
-      .room-details__rightContentBlock
+      .room-details__right-content-block
         +booking({id: 'roomDetails__booking1'})
