--- a/src/components/UI-kit/color-fonts/color-fonts.pug
+++ b/src/components/UI-kit/color-fonts/color-fonts.pug
@@ -1,5 +1,5 @@
 mixin color-fonts({tag='h1', title=""})
   li.color-fonts__item
-    span(class=`color-fonts__tagFonts color-fonts__${tag}`)= tag
-    .color-fonts__textWrapper
-      span(class=`color-fonts__textFonts color-fonts__text--${tag}`)= title
+    span(class=`color-fonts__tag-fonts color-fonts__${tag}`)= tag
+    .color-fonts__text-wrapper
+      span(class=`color-fonts__text-fonts color-fonts__text--${tag}`)= title
