--- a/src/pages/login-page/login-page.scss
+++ b/src/pages/login-page/login-page.scss
@@ -10,7 +10,7 @@
     width: 100%;
   }
 
-  &__loginForm {
+  &__login-form {
     margin-left: 530px;
     @media (max-width: 1380px) {
       margin: 0 auto;
