--- a/src/pages/registration-page/registration-page.scss
+++ b/src/pages/registration-page/registration-page.scss
@@ -10,7 +10,7 @@
     width: 100%;
   }
 
-  &__registrationForm {
+  &__registration-form {
     margin-left: 533px;
     @media (max-width: 1500px) {
       margin: 0 auto;
