--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -1,7 +1,7 @@
 .room-details {
   margin-bottom: 15px;
 
-  &__imgBlock {
+  &__img-block {
     width: 100%;
     display: flex;
     @media (max-width: 460px) {
@@ -10,13 +10,13 @@
     }
   }
 
-  &__leftImg {
+  &__left-img {
     @media (max-width: 1400px) {
       width: 100%;
     }
   }
 
-  &__topImg {
+  &__top-img {
     width: 461px;
     height: 243px;
     @media (max-width: 1400px) {
@@ -25,13 +25,13 @@
     }
   }
 
-  &__firstRightImage {
+  &__first-right-image {
     @media (max-width: 1400px) {
       width: 100%;
     }
   }
 
-  &__botImg {
+  &__bot-img {
     width: 461px;
     height: 243px;
     @media (max-width: 1400px) {
@@ -40,13 +40,13 @@
     }
   }
 
-  &__secondRightImage {
+  &__second-right-image {
     @media (max-width: 1400px) {
       width: 100%;
     }
   }
 
-  &__mainContent {
+  &__main-content {
     display: flex;
     padding: 46px 140px;
     @media (max-width: 1300px) {
@@ -56,7 +56,7 @@
     }
   }
 
-  &__leftContentBlock {
+  &__left-content-block {
     width: 712px;
     margin-right: 70px;
     @media (max-width: 800px) {
@@ -65,7 +65,7 @@
     }
   }
 
-  &__topContent {
+  &__top-content {
     display: flex;
     @media (max-width: 700px) {
       flex-direction: column;
@@ -73,7 +73,7 @@
     }
   }
 
-  &__roomInfo {
+  &__room-info {
     margin-right: 80px;
     @media (max-width: 700px) {
       margin: 0;
@@ -122,7 +122,7 @@
     }
   }
 
-  &__botContent {
+  &__bot-content {
     display: flex;
     margin-top: 20px;
     @media (max-width: 700px) {
@@ -142,7 +142,7 @@
     }
   }
 
-  &__freeCancle {
+  &__free-cancel {
     margin-top: 15px;
 
     & .room-details__header {
@@ -158,7 +158,7 @@
     }
   }
 
-  &__rightContentBlock {
+  &__right-content-block {
     margin-top: 15px;
   }
 }
