Added rate-slider component, added rate-slider on search-room and form-elements pages

--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -7,6 +7,7 @@ include ../../components/checkbox/checkbox.pug
 include ../../components/expandable-checkbox-list/expandable-checkbox-list.pug
 include ../../components/pagination/pagination.pug
 include ../../components/room/room.pug
+include ../../components/rate-slider/rate-slider.pug
 
 block header
   title Search room page
@@ -43,6 +44,8 @@ block content
         .search-room__guest-dropdown
           +dropdown({uniqId: 'searchRoom__dropdown1', title: 'гости', description: '', small: true, text: 'Сколько гостей'})
         .search-room__rate-price-slider
+          +rate-slider({id: 'search-room__slider', headerText: 'диапазон цены'})
+          span.search-room__footer-text-slider= "Стоимость за сутки пребывания в номере"
         .search-room__rules
           h3.search-room__sidebar-header правила дома
           +checkbox({id: 'checkbox1', title: 'Можно курить'})
