--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -14,6 +14,7 @@ include ../../components/rate-button/rate-button.pug
 include ../../components/comment/comment.pug
 include ../../components/pagination/pagination.pug
 include ../../components/toggle/toggle.pug
+include ../../components/rate-slider/rate-slider.pug
 
 block header
   title Form elements
@@ -89,7 +90,7 @@ block content
     .form-elements__third-column
       .form-elements__first-block
         .form-elements__range-slider
-          h3.form-elements__header range slider
+          +rate-slider({uniqId: 'slider_formElements', headerText: 'Range Slider'})
         .form-elements__buttons
           h3.form-elements__header buttons
           .form-elements__top-buttons
