--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -54,10 +54,20 @@
   }
 
   &__rate-price-slider {
-    height: 120px;
+    margin-top: 30px;
+  }
+
+  &__footer-text-slider {
+    display: inline-block;
+    margin-top: 11px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    color: rgba(31, 32, 65, 0.5);
   }
 
   &__rules {
+    margin-top: 26px;
   }
 
   &__availability {
