--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -124,7 +124,7 @@
 
   &__bot-content {
     display: flex;
-    margin-top: 20px;
+    margin-top: 33px;
     @media (max-width: 700px) {
       flex-direction: column;
       align-items: center;
@@ -132,19 +132,17 @@
   }
 
   &__rules {
-    margin: 4px 100px 0 0;
+    margin: 0 102px 0 0;
     & .room-details__header {
-      margin: 7px 0 0 20px;
+      margin: 0 0 0 21px;
     }
 
     & .bullet-list__list {
-      margin: 20px 0 0;
+      margin: 18px 0 0;
     }
   }
 
   &__free-cancel {
-    margin-top: 15px;
-
     & .room-details__header {
       padding: 0;
       margin-top: -2px;
@@ -152,6 +150,7 @@
 
     & .room-details__text {
       width: 342px;
+      margin-top: 20px;
       @media (max-width: 380px) {
         width: 100%;
       }
