Change icorrect number in rooms on cards and search-room pages

--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -28,6 +28,6 @@ block content
       .cards__air-date-picker 
         +air-date-picker({uniqId: 'cardsAirDatePicker1'})
       .cards__first-room
-        +room({id: 'room1', type: 'люкс', price: '9 990', stars: 5, review: 145, array: ['room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg']})
+        +room({id: 'room1', type: 'люкс', number: '888', price: '9 990', stars: 5, review: 145, array: ['room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg']})
       .cards__second-room
         +room({id: 'room2', type: '', number: '840', price: '9 990', stars: 4, review: 65, array: ['room.jpg', 'room.jpg', 'room.jpg', 'room.jpg']})
