Fixed styles chart component, and form-elements page

--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -20,6 +20,7 @@
     right: 7px;
     list-style: none;
     margin-top: 47px;
+    margin-left: 2px;
     @media (max-width: 380px) {
       margin-top: 0;
     }
