--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -24,10 +24,10 @@ block content
       .room-details__left-content-block
         .room-details__top-content 
           .room-details__room-info 
-            h2.room-details__header Сведения о номере
+            h2.room-details__room-info-header Сведения о номере
             +icon-text-list({list: [{title: 'Комфорт', text: 'Шумопоглощающие стены', icon: 'insert_emoticon'}, {title: 'Удобство', text: 'Окно в каждой из спален', icon: 'location_city'}, {title: 'Уют', text: 'Номер оснащён камином', icon: 'whatshot'},]})
           .room-details__review 
-            h2.room-details__header Впечатления от номера
+            h2.room-details__review-header Впечатления от номера
             +chart({})
         .room-details__comments 
           .room-details__comment-header-wrapper
@@ -39,10 +39,10 @@ block content
             +comment({id: 'UniqIdComment2', title: 'Патрисия Стёклышкова', date: 'Неделю', photo: 'photo2.png', likes: 2, liked: false, text: 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент'})
         .room-details__bot-content
           .room-details__rules 
-            h2.room-details__header Правила
+            h2.room-details__rules-header Правила
             +bullet-list({title: 'Правила', list: ['Нельзя с питомцами', 'Без вечеринок и мероприятий', 'Время прибытия — после 13:00, а выезд до 12:00']})
           .room-details__free-cancel
-            h2.room-details__header Отмена
+            h2.room-details__free-cancel-header Отмена
             p.room-details__text Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
 
       .room-details__right-content-block
